# rvemu

./: .gitignore  Bus.cpp  Bus.hpp  CMakeLists.txt  CPU.cpp  CPU.hpp  CSR.cpp  CSR.hpp  DRAM.cpp  DRAM.hpp  Exception.cpp  Exception.h  InstructionExecutor.cpp  InstructionExecutor.hpp  LICENSE  Log.hpp  README.md  RVEmu.h  main.cpp
src/: BitsManipulation.cpp  BitsManipulation.hpp  Cpu.cpp  Cpu.hpp  Csr.cpp  Csr.hpp  Emulator.cpp  Emulator.hpp  Memory.cpp  Memory.hpp  RVEmu.hpp  Registers.cpp  Registers.hpp  main.cpp
src/instructions/: Branch.cpp  Branch.hpp  Fence.hpp  Iformat.cpp  Iformat.hpp  InstFormat.cpp  InstFormat.hpp  Jformat.cpp  Jformat.hpp  Load.cpp  Load.hpp  Rformat.cpp  Rformat.hpp  Store.cpp  Store.hpp  System.cpp  System.hpp  Uformat.cpp  Uformat.hpp
tests/: BUSTest.cpp  CPUTest.cpp  CSRTest.cpp  DRAMTest.cpp  InstsTest.cpp  instructionsTest.cpp  testUtil.cpp  testUtil.hpp
